force-app/main/default/objects/CourseContact__c/CourseContact__c.object-meta.xml
<CustomObject>
    <label>פניה לקורס</label>
    <nameField>
        <displayFormat>A{000000000}</displayFormat>
        <label>מזהה פניה לקורס</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>פניות לקורס</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>