force-app/main/default/objects/CourseContact__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <label>ContactPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>