force-app/main/default/objects/CourseContact__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>פניות לקורס</relationshipLabel>
    <relationshipName>ContactCourses</relationshipName>
    <type>Lookup</type>
</CustomField>