force-app/main/default/objects/CourseContact__c/fields/course_name_f__c.field-meta.xml
<CustomField>
    <fullName>course_name_f__c</fullName>
    <formula>Course__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>course name f</label>
    <type>Text</type>
</CustomField>