force-app/main/default/objects/CourseContact__c/fields/Course_Number_f__c.field-meta.xml
<CustomField>
    <fullName>Course_Number_f__c</fullName>
    <formula>Course__r.CourseNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Number f</label>
    <type>Text</type>
</CustomField>