force-app/main/default/objects/CourseContact__c/fields/CourseCity_f__c.field-meta.xml
<CustomField>
    <fullName>CourseCity_f__c</fullName>
    <formula>Course__r.City__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CourseCity f</label>
    <type>Text</type>
</CustomField>