force-app/main/default/objects/CourseContact__c/fields/InstitutionNickname_f__c.field-meta.xml
<CustomField>
    <fullName>InstitutionNickname_f__c</fullName>
    <formula>Course__r.InstitutionNickname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InstitutionNickname f</label>
    <type>Text</type>
</CustomField>