force-app/main/default/objects/CourseContact__c/fields/PopulationType_f__c.field-meta.xml
<CustomField>
    <fullName>PopulationType_f__c</fullName>
    <formula>TEXT(Course__r.PopulationType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PopulationType f</label>
    <type>Text</type>
</CustomField>