force-app/main/default/objects/CourseContact__c/fields/ProfessionCourse__c.field-meta.xml
<CustomField>
    <fullName>ProfessionCourse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מגמה</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProfessionCourse__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Profession</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProfessionCourse__c</referenceTo>
    <relationshipLabel>פניות לקורס</relationshipLabel>
    <relationshipName>ProfessionCourse</relationshipName>
    <type>Lookup</type>
</CustomField>