force-app/main/default/objects/CourseContact__c/fields/ProfessionCourse_f__c.field-meta.xml
<CustomField>
    <fullName>ProfessionCourse_f__c</fullName>
    <formula>Course__r.ProfessionCourse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfessionCourse f</label>
    <type>Text</type>
</CustomField>