force-app/main/default/objects/CourseContact__c/fields/StartDate_Estimated_f__c.field-meta.xml
<CustomField>
    <fullName>StartDate_Estimated_f__c</fullName>
    <formula>TEXT(Course__r.StartDate_Estimated__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StartDate_Estimated f</label>
    <type>Text</type>
</CustomField>