force-app/main/default/objects/CourseContact__c/fields/Timing_f__c.field-meta.xml
<CustomField>
    <fullName>Timing_f__c</fullName>
    <formula>TEXT(Course__r.Timing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timing f</label>
    <type>Text</type>
</CustomField>