force-app/main/default/objects/CourseContact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProfessionCourse__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ContactName__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>ContactPhone__c</columns>
    <columns>Mailing_confirmation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>